# bytebook

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  Taskfile.yml  app.go  assets.go  auth_service.go  biome.json  bunfig.toml  folder_service.go  go.mod  go.sum  lefthook.yml  main.go  node_service.go  note_service.go  package.json  pnpm-lock.yaml  search_service.go  settings_service.go  skills-lock.json  tags_service.go  terminal_service.go  test.py  test_markdown.md  wails.json
.agents/: server.ts
.antigravitycli/: 1b3c29e1-064a-41cd-a309-6ce6d7678e75.json  425179ce-812f-4063-a815-45527b46a3da.json  5551324e-b9e4-407a-9692-46fcd5b50c4e.json  db898296-5a1d-48db-95db-bdee170f13e3.json
.zed/: settings.json
backend/: pyproject.toml
backend/backend/api/endpoints/: auth.py  github_oauth.py
backend/backend/app/: main.py
bytebook/: Taskfile.yml  go.mod  main.go
checksum/: common-install-frontend-deps  darwin-common-build-frontend  darwin-common-generate-bindings  darwin-common-go-mod-tidy
frontend/: .gitignore  .prettierignore  .size-limit.json  README.md  biome.json  bunfig.toml  cypress.config.ts  eslint.config.js  index.html  knip.json  knip.ts  package-lock.json  package.json  package.json.md5  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  test_script.sh  tsconfig.json  vite.config.ts
internal/: main.go
services/: auth_service.go  code_service.go  folder_service.go  node_service.go  note_service.go  search_service.go  settings_service.go  tags_service.go  terminal_service.go
sql_helpers/: package.go
test/: notes.json
(+957 files in other folders)
