[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["etesam <etesamansari13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
